--- a/AppServSalud/src/main/resources/templates/dashboardProfesional.html
+++ b/AppServSalud/src/main/resources/templates/dashboardProfesional.html
@@ -18,7 +18,7 @@
         >
         <link
             rel="stylesheet"
-            th:href="@{/styles/footer.css}"
+            th:href="@{/styles/main.css}"
         >
         <style>
             .toast-exito,
