--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -17,15 +17,11 @@
   >
   <link
     rel="stylesheet"
-    th:href="@{/styles/footer.css}"
+    th:href="@{/styles/main.css}"
   >
   <link
     rel="stylesheet"
     th:href="@{/styles/calificacionProfesional.css}"
-  >
-  <link
-    rel="stylesheet"
-    th:href="@{/styles/especialidades.css}"
   >
   <link
     rel="stylesheet"
