--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -3,7 +3,26 @@
     lang="es"
     xmlns:th="http://www.thymeleaft.org"
 >
+
     <head th:replace="/fragments/head :: head"></head>
+    <head>
+        <style>
+            #spinner {
+                width: 100vw;
+                height: 100vh;
+                background-color: rgba(0, 0, 0, 0.5);
+                position: fixed;
+                top: 0;
+                left: 0;
+                z-index: 1000;
+                display: flex;
+                justify-content: center;
+                align-items: center;
+                display: none;
+            }
+        </style>
+    </head>
+
     <body>
         <header th:replace="/fragments/header :: header"></header>
         <div th:replace="/fragments/toast :: div"></div>
@@ -27,7 +46,6 @@
                                     id="exampleFormControlInput1"
                                     placeholder="name@example.com"
                                     name="username"
-                                    autofocus
                                     required
                                 >
                             </div>
@@ -52,23 +70,24 @@
                         </div>
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-lg-3">
-                            <button
-                                type="button"
-                                class="btn btn-primary"
-                                data-toggle="modal"
-                                data-target="#exampleModalCenter"
-                            >
-                                Recuperar Contraseña
-                            </button>
-                        </div>
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 d-grid">
                             <button
                                 type="submit"
                                 class="btn btn-primary"
                             >
                                 Ingresar
                             </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-3 text-center mt-4">
+                            <a
+                                href="#"
+                                data-toggle="modal"
+                                data-target="#exampleModalCenter"
+                            >
+                                Recuperar Contraseña
+                            </a>
                         </div>
                     </div>
                 </form>
@@ -86,38 +105,40 @@
                 aria-labelledby="exampleModalCenterTitle"
                 aria-hidden="true"
             >
-                <form th:action="@{/recuperarCuenta}">
-                    <div
-                        class="modal-dialog modal-dialog-centered"
-                        role="document"
-                    >
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5
-                                    class="modal-title"
-                                    id="exampleModalLongTitle"
-                                >Recuperar Cuenta</h5>
-                                <button
-                                    type="button"
-                                    class="close"
-                                    data-dismiss="modal"
-                                    aria-label="Close"
-                                >
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body row justify-content-center">
-                                <label
-                                    for="exampleFormControlInput1"
-                                    class="input-group-text"
-                                >Email</label>
-                                <input
-                                    type="email"
-                                    class="form-control"
-                                    id="exampleFormControlInput1"
-                                    placeholder="name@example.com"
-                                    name="email"
-                                >
+                <div
+                    class="modal-dialog modal-dialog-centered"
+                    role="document"
+                >
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <h5
+                                class="modal-title"
+                                id="exampleModalLongTitle"
+                            >Recuperar Cuenta</h5>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-dismiss="modal"
+                                aria-label="Close"
+                            >
+                            </button>
+                        </div>
+                        <form th:action="@{/recuperarCuenta}">
+                            <div class="modal-body row">
+                                <div class="input-group">
+                                    <label
+                                        for="exampleFormControlInput1"
+                                        class="input-group-text"
+                                    >Email</label>
+                                    <input
+                                        type="email"
+                                        class="form-control"
+                                        id="exampleFormControlInput1"
+                                        placeholder="name@example.com"
+                                        name="email"
+                                    >
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button
@@ -131,9 +152,9 @@
                                     class="btn btn-primary"
                                 >Recuperar cuenta</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
 
             <div id="spinner">
@@ -148,14 +169,19 @@
 
         <footer th:replace="/fragments/footer :: footer"></footer>
 
-        <!-- <script
+        <script
             src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
             integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
             crossorigin="anonymous"
-        ></script> -->
+        ></script>
         <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
+            integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
+            crossorigin="anonymous"
+        ></script>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
+            integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
             crossorigin="anonymous"
         ></script>
         <script th:src="@{/js/toast.js}"></script>
