--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -14,10 +14,9 @@
             <div class="info-home row">
                 <h1> ¿En qué podemos ayudarte? </h1>
                 <div th:replace="/fragments/buscador :: div"></div>
-            </div>
+            </div> 
         </div>
-        <video autoplay="" muted="" loop="" poster="https://www.sanatorioallende.com/wp-content/themes/sanatorio/images/home/sanatorio.png">
-            <source th:src="@{/assets/MediVideo.MP4}" type="video/mp4">
+        <video autoplay muted loop th:src="@{/assets/MediVideo.webm}" >
         </video>
 
     </section>
