--- a/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
+++ b/AppServSalud/src/main/resources/templates/fragments/dashProfesionalPrincipal.html
@@ -2,21 +2,14 @@
   class="col-sm-12 px-5"
   th:fragment="principal"
 >
-  <div
-    id="dash-titulo"
-    class="mt-2 mb-2"
-  >
-    <h5>Dashboard</h5>
-  </div>
-
-  <div class="container bg-primary rounded-3 px-5 p-2 text-center">
-    <p class="text-white fw-bold fs-4 m-0">
+  <div class="container rounded-3 px-5 p-2 text-center">
+    <p class="fw-bold fs-4 m-0">
       Bienvenido, <span
         class="text-capitalize"
         th:text="${profesional.nombre}"
       ></span>
     </p>
-    <p class="text-white m-0">Tenga un buen día</p>
+    <p class="m-0">Tenga un buen día</p>
   </div>
   <div
     id="dash-titulo"
