--- a/AppServSalud/src/main/resources/templates/error_404.html
+++ b/AppServSalud/src/main/resources/templates/error_404.html
@@ -3,8 +3,19 @@
         <head th:replace="/fragments/head :: head"></head>
         <body>
                 <header th:replace="/fragments/header :: header"></header>
-                <h1>Error 404 - Página no encontrada</h1>
-                <p>La página que estás buscando no se encuentra en este sitio.</p>
+                <main>
+                        <div
+                                class="container-fluid d-flex justify-content-center align-items-center"
+                                style="backdrop-filter: blur(4px);"
+                        >
+                                <div class="text-center mt-5 mb-5 p-5">
+                                        <div class="error404">404</div>
+                                        <span class="info404">Página no encontrada</span>
+                                </div>
+                        </div>
+                        <!-- <p>La página que estás buscando no se encuentra en este sitio.</p> -->
+                </main>
+                <footer th:replace="/fragments/footer :: footer"></footer>
                 <script
                         src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
                         integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
