--- a/AppServSalud/src/main/resources/templates/fragments/head.html
+++ b/AppServSalud/src/main/resources/templates/fragments/head.html
@@ -17,7 +17,7 @@
   >
   <link
     rel="stylesheet"
-    th:href="@{/styles/footer.css}"
+    th:href="@{/styles/main.css}"
   >
   <link
     rel="stylesheet"
@@ -25,21 +25,13 @@
   >
   <link
     rel="stylesheet"
-    th:href="@{/styles/especialidades.css}"
-  >
-  <link
-    rel="stylesheet"
     th:href="@{/styles/motorBusqueda.css}"
   >
-  <style>
-    @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,900;1,400;1,900&display=swap');
-
-    * {
-      font-family: 'Roboto', sans-serif;
-    }
-  </style>
   <script
     src="https://kit.fontawesome.com/6959f9ca80.js"
     crossorigin="anonymous"
   ></script>
+
+  <script th:src="@{/js/dashProfesional.js}"></script>
+
 </head>
