--- a/AppServSalud/src/main/resources/templates/forms/recuperarCuenta.html
+++ b/AppServSalud/src/main/resources/templates/forms/recuperarCuenta.html
@@ -1,73 +1,75 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaft.org">
+    <head th:replace="/fragments/head :: head"></head>
+    <body>
+        <header th:replace="/fragments/header :: header"></header>
+        <div th:replace="/fragments/toast :: div"></div>
+        <h3>Recuperacion de contraseña</h3>
 
-<head th:replace="/fragments/head :: head"></head>
+        <form
+            th:action="@{/recuperarCuenta}"
+            method="post"
+            class="container mt-5"
+        >
 
-<body>
-    <header th:replace="/fragments/header :: header"></header>
-    <div th:replace="/fragments/toast :: div"></div>
-    <h3>Recuperacion de contraseña</h3>
-
-    <form th:action="@{/recuperarCuenta}" method="post" class="container mt-5">
-
-        <div class="row justify-content-center">
-            <div class="col-lg-5">
-                <div class="input-group mb-3">
-                    <label
-                        for="password"
-                        class="input-group-text"
-                    >Contraseña</label>
-                    <input
-                        type="password"
-                        class="form-control"
-                        name="password"
-                        placeholder="******"
-                        id="password"
-                    >
+            <div class="row justify-content-center">
+                <div class="col-lg-5">
+                    <div class="input-group mb-3">
+                        <label
+                            for="password"
+                            class="input-group-text"
+                        >Contraseña</label>
+                        <input
+                            type="password"
+                            class="form-control"
+                            name="password"
+                            placeholder="******"
+                            id="password"
+                            autofocus
+                        >
+                    </div>
+                </div>
+                <p></p>
+                <div class="col-lg-5">
+                    <div class="input-group mb-3">
+                        <label
+                            for="password2"
+                            class="input-group-text"
+                        >Repetir Contraseña</label>
+                        <input
+                            type="password"
+                            class="form-control"
+                            name="password2"
+                            placeholder="******"
+                            id="password2"
+                        >
+                    </div>
                 </div>
             </div>
-            <p></p>
-            <div class="col-lg-5">
-                <div class="input-group mb-3">
-                    <label
-                        for="password2"
-                        class="input-group-text"
-                    >Repetir Contraseña</label>
-                    <input
-                        type="password"
-                        class="form-control"
-                        name="password2"
-                        placeholder="******"
-                        id="password2"
-                    >
+            <input
+                type="hidden"
+                id="token"
+                name="token"
+            />
+            <div class="row justify-content-center mt-5">
+                <div class="col-lg-4 d-grid">
+                    <button
+                        type="submit"
+                        class="btn btn-primary botones"
+                        id="enviar"
+                    >Enviar</button>
                 </div>
             </div>
-        </div>
-        <input type="hidden" id="token" name="token" />
-        <div class="row justify-content-center mt-5">
-            <div class="col-lg-4 d-grid">
-                <button
-                    type="submit"
-                    class="btn btn-primary botones"
-                    id="enviar"
-                >Enviar</button>
-            </div>
-        </div>
 
-    </form>
+        </form>
 
-
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
-        integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js"
-        integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js"
-        integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
-        crossorigin="anonymous"></script>
-    <script th:src="@{/js/toast.js}"></script>
-    <script th:src="@{/js/recuperacion.js}"></script>
-</body>
+        <script
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+            crossorigin="anonymous"
+        ></script>
+        <script th:src="@{/js/toast.js}"></script>
+        <script th:src="@{/js/recuperacion.js}"></script>
+    </body>
 
 </html>
