--- a/AppServSalud/src/main/resources/templates/login.html
+++ b/AppServSalud/src/main/resources/templates/login.html
@@ -70,23 +70,24 @@
                         </div>
                     </div>
                     <div class="row justify-content-center">
-                        <div class="col-lg-3">
-                            <button
-                                type="button"
-                                class="btn btn-primary"
-                                data-toggle="modal"
-                                data-target="#exampleModalCenter"
-                            >
-                                Recuperar Contraseña
-                            </button>
-                        </div>
-                        <div class="col-lg-2">
+                        <div class="col-lg-2 d-grid">
                             <button
                                 type="submit"
                                 class="btn btn-primary"
                             >
                                 Ingresar
                             </button>
+                        </div>
+                    </div>
+                    <div class="row justify-content-center">
+                        <div class="col-lg-3 text-center mt-4">
+                            <a
+                                href="#"
+                                data-toggle="modal"
+                                data-target="#exampleModalCenter"
+                            >
+                                Recuperar Contraseña
+                            </a>
                         </div>
                     </div>
                 </form>
@@ -104,38 +105,40 @@
                 aria-labelledby="exampleModalCenterTitle"
                 aria-hidden="true"
             >
-                <form th:action="@{/recuperarCuenta}">
-                    <div
-                        class="modal-dialog modal-dialog-centered"
-                        role="document"
-                    >
-                        <div class="modal-content">
-                            <div class="modal-header">
-                                <h5
-                                    class="modal-title"
-                                    id="exampleModalLongTitle"
-                                >Recuperar Cuenta</h5>
-                                <button
-                                    type="button"
-                                    class="close"
-                                    data-dismiss="modal"
-                                    aria-label="Close"
-                                >
-                                    <span aria-hidden="true">&times;</span>
-                                </button>
-                            </div>
-                            <div class="modal-body row justify-content-center">
-                                <label
-                                    for="exampleFormControlInput1"
-                                    class="input-group-text"
-                                >Email</label>
-                                <input
-                                    type="email"
-                                    class="form-control"
-                                    id="exampleFormControlInput1"
-                                    placeholder="name@example.com"
-                                    name="email"
-                                >
+                <div
+                    class="modal-dialog modal-dialog-centered"
+                    role="document"
+                >
+                    <div class="modal-content">
+
+                        <div class="modal-header">
+                            <h5
+                                class="modal-title"
+                                id="exampleModalLongTitle"
+                            >Recuperar Cuenta</h5>
+                            <button
+                                type="button"
+                                class="btn-close"
+                                data-dismiss="modal"
+                                aria-label="Close"
+                            >
+                            </button>
+                        </div>
+                        <form th:action="@{/recuperarCuenta}">
+                            <div class="modal-body row">
+                                <div class="input-group">
+                                    <label
+                                        for="exampleFormControlInput1"
+                                        class="input-group-text"
+                                    >Email</label>
+                                    <input
+                                        type="email"
+                                        class="form-control"
+                                        id="exampleFormControlInput1"
+                                        placeholder="name@example.com"
+                                        name="email"
+                                    >
+                                </div>
                             </div>
                             <div class="modal-footer">
                                 <button
@@ -149,9 +152,9 @@
                                     class="btn btn-primary"
                                 >Recuperar cuenta</button>
                             </div>
-                        </div>
+                        </form>
                     </div>
-                </form>
+                </div>
             </div>
 
             <div id="spinner">
