--- a/AppServSalud/src/main/resources/templates/vistaPerfil.html
+++ b/AppServSalud/src/main/resources/templates/vistaPerfil.html
@@ -9,7 +9,7 @@
     <body>
         <header th:replace="/fragments/header :: header"></header>
         <div th:replace="/fragments/toast :: div"></div>
-        <div class="container d-flex flex-column align-items-center mt-3">
+        <div class="container d-flex flex-column align-items-center mt-3 mb-3">
             <div
                 class="card"
                 style="background-color: #86d162; max-width: 500px;"
@@ -19,7 +19,10 @@
                     alt="pattern_card"
                     class="card-img-top"
                 >
-                <div class="card-header position-absolute mx-5 px-5 bg-transparent" style="border-bottom: none;">
+                <div
+                    class="card-header position-absolute mx-5 px-5 bg-transparent"
+                    style="border-bottom: none;"
+                >
                     <div class="avatar text-center mt-5 bt-5">
                         <img
                             th:src="@{/imagen/perfil/__${usuario.id}__}"
@@ -36,10 +39,16 @@
                     </div>
                 </div>
                 <article class="card-article mt-5">
-                    <section class="card-body mt-3 text-center">
+                    <section class="card-body mt-4 text-center">
                         <h3>
-                            <span th:text="${usuario.nombre}"></span>
-                            <span th:text="${usuario.apellido}"></span>
+                            <span
+                                class="text-capitalize"
+                                th:text="${usuario.nombre}"
+                            ></span>
+                            <span
+                                class="text-capitalize"
+                                th:text="${usuario.apellido}"
+                            ></span>
                         </h3>
                         <hr>
                         <div>
@@ -97,6 +106,7 @@
                                     <span
                                         th:text="${usuario.descripcion}"
                                         sec:authorize="hasRole('ROLE_MEDICO')"
+                                        class="text-capitalize"
                                     ></span>
                                 </p>
                             </div>
@@ -105,56 +115,15 @@
                 </article>
             </div>
         </div>
-
-        <!-- Button trigger modal -->
-        <button
-            type="button"
-            class="btn btn-primary"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-        >
-            Notificaciones
-        </button>
+         <!-- Button trigger modal -->
+        
 
         <!-- Modal -->
-        <div
-            class="modal fade"
-            id="exampleModal"
-            tabindex="-1"
-            aria-labelledby="exampleModalLabel"
-            aria-hidden="true"
-        >
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1
-                            class="modal-title fs-5"
-                            id="exampleModalLabel"
-                        >Notificaciones</h1>
-                        <button
-                            type="button"
-                            class="btn-close"
-                            data-bs-dismiss="modal"
-                            aria-label="Close"
-                        ></button>
-                    </div>
-                    <div class="modal-body">
-                        <ul th:each="notificacion : ${usuario.notificaciones}">
-                            <li th:text="${notificacion.mensaje}"></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </div>
+       
         <footer th:replace="/fragments/footer :: footer"></footer>
         <script
-            src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-            integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-            crossorigin="anonymous"
-        ></script>
-        <script
-            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"
-            integrity="sha384-BBtl+eGJRgqQAUMxJ7pMwbEyER4l1g+O15P+16Ep7Q9Q+zqX6gSbd85u4mG4QzX+"
+            src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
             crossorigin="anonymous"
         ></script>
         <script th:src="@{/js/toast.js}"></script>
