se agrega campanita de notificaicones con numeros

--- a/AppServSalud/src/main/resources/templates/index.html
+++ b/AppServSalud/src/main/resources/templates/index.html
@@ -24,8 +24,8 @@
                         loop
                     >
                         <source
-                            th:src="@{/assets/MediVideo.MP4}"
-                            type="video/mp4"
+                            th:src="@{/assets/MediVideo.webm}"
+                            type="video/webm"
                         >
                     </video>
 
